Fixed logo again, styled to fix contrast

--- a/css/nav.css
+++ b/css/nav.css
@@ -20,7 +20,7 @@ body {
 /* add some padding back to rest of page */
 
 main {
-    padding: 2vw;
+ padding-left: vw;
 
 
 
@@ -29,13 +29,13 @@ main {
 /* navbar */
 
 .navbar {
-    background-color: rgb(245, 245, 245);
-    color: rgb(64, 91, 64);
+    background-color: rgb(76, 106, 76);
+    color: whitesmoke;
     display: flex;
     flex-direction: column;
     font-size: 2rem;
     margin: 0rem;
-    margin-bottom: 1rem;
+    margin-bottom: 5rem;
     padding-bottom: 0.5rem;
     
     
@@ -52,10 +52,11 @@ main {
 }
 
 .logo img{
-    height: 6vw;
-    width: 5vw;
-    padding-left: 0.25rem;
+    height: 3vw;
+    width: 3vw;
+    padding-left: 1rem;
     padding-right: 1rem;
+    padding-bottom: 1.25rem;
 
 
 }
@@ -82,8 +83,8 @@ main {
 */
 
 .navbar-links a {
-    color: rgb(64, 91, 64);
-    background-color: whitesmoke;
+    color: whitesmoke;
+    background-color: rgb(76, 106, 76);
     font-size: 1.5rem;
     padding: 1rem 1.25rem;
     letter-spacing: 2px;
@@ -93,8 +94,8 @@ main {
 
 .navbar-links a:hover,
 .navbar-links a:focus {
-    color: whitesmoke;
-    background-color: rgb(76, 106, 76);
+    color: rgb(49, 68, 49);
+    background-color: whitesmoke;
     border-radius: 10px;
     outline: none;
 
